align corrections

--- a/orinoco.css
+++ b/orinoco.css
@@ -35,20 +35,25 @@ a
 }
 .presentation
 {
+	width: 100%;
 	display: flex;
-	flex-direction:column;
-	justify-content: space-around;
-	margin: 20px;
+	flex-wrap:wrap;
+	flex-direction: space-between;
+	justify-content: space-evenly;
 }
 .presentation img
 {
-	margin: auto;
-	width: 80%;
+	width: 300px;
+	margin-bottom: 30px;
 }
 @media screen and (min-width:750px)
 {
 	body
 	{
 		font-size: 20px;
+	}
+	.presentation img
+	{
+		width: 500px;
 	}
 }
